# PromptBridge

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  promptbridge_final_plan.html  vite.config.ts
docs/: DEV_LOG.md  PRODUCT_BLUEPRINT.md  PROJECT_SCOPE.md  PROJECT_STATE.md  QA_CHECKLIST.md  ROADMAP.md  SOURCE_OF_TRUTH_INDEX.md  VERIFICATION.md  beta-test-checklist.md  custom-protected-terms.md  output-translation.md  overlay-window.md  privacy-guards.md  prompt-profiles.md  prompt-protection.md  provider-connection-test.md  provider-usage.md  release-notes-v0.1.0.md  settings-backup.md  translation-history.md  translation-provider-strategy.md  ui-localization.md  week0-text-injection-spike.md
scripts/: week0-paste-spike.ps1  windows-release-smoke-test.ps1
src/: App.tsx  i18n.ts  privacyGuards.test.ts  privacyGuards.ts  promptProfiles.test.ts  promptProfiles.ts  promptProtection.test.ts  promptProtection.ts  providerUsage.test.ts  providerUsage.ts  settingsBackup.test.ts  settingsBackup.ts  settingsStore.ts  styles.css  translationHistory.test.ts  translationHistory.ts  translationProviders.test.ts  translationProviders.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
